--- a/lab_b2.ipynb
+++ b/lab_b2.ipynb
@@ -258,9 +258,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/lcernyo/miniconda3/envs/awad/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from pathlib import Path\n",
     "\n",
@@ -285,10 +294,12 @@
     "    training_set = get_dataset('ards_training_set.pkl', 'train')\n",
     "    validation_set = get_dataset('ards_validation_set.pkl', 'val')\n",
     "    testing_set = get_dataset('ards_testing_set.pkl', 'test')\n",
-    "    return training_set, validation_set, testing_set\n",
+    "    return training_se, validation_set, testing_set\n",
     "\n",
     "\n",
     "training_set, validation_set, testing_set = get_all_datasets()\n",
+    "\n",
+    "\n",
     "train_loader = DataLoader(training_set, batch_size=batch_size, shuffle=True)\n",
     "val_loader = DataLoader(validation_set, batch_size=batch_size, shuffle=False)\n",
     "test_loader = DataLoader(testing_set, batch_size=batch_size, shuffle=False)"
@@ -296,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +359,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.7"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
